--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.0.1
 cffi==1.17.1
 click==8.1.8
 colorama==0.4.6
+coverage==7.8.0
 cryptography==44.0.2
 dotenv==0.9.9
 ecdsa==0.19.1
@@ -11,12 +13,19 @@ fastapi==0.115.12
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
+iniconfig==2.1.0
+Mako==1.3.9
+MarkupSafe==3.0.2
+packaging==24.2
 passlib==1.7.4
+pluggy==1.5.0
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.11.2
 pydantic_core==2.33.1
+pytest==8.3.5
+pytest-cov==6.1.1
 python-dotenv==1.1.0
 python-jose==3.4.0
 python-multipart==0.0.20
