--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.11.2
 pydantic_core==2.33.1
+PyJWT==2.10.1
 pytest==8.3.5
 pytest-cov==6.1.1
 python-dotenv==1.1.0
